# open-xquant

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: agent_demo.py
docs/: architecture.md
docs/plans/: 2026-02-27-agent-demo-design.md  2026-02-27-agent-demo.md  2026-02-27-data-layer-market-design.md  2026-02-27-data-layer-market.md
examples/app/: agent_demo.py
examples/strategies/: sma_crossover.py
examples/tutorials/: backtest_module.ipynb  data_module.ipynb  universe_module.ipynb
mcp_server/: server.py
mcp_server/tools/: data_tools.py  universe_tools.py
skills/: data-explorer.md  universe-builder.md
src/oxq/: __init__.py
src/oxq/backtest/: __init__.py  analytics.py  broker.py  engine.py
src/oxq/core/: __init__.py  errors.py  strategy.py  types.py
src/oxq/data/: __init__.py  factors.py  loaders.py  market.py  providers.py
src/oxq/indicators/: __init__.py  sma.py
src/oxq/rules/: __init__.py  entry.py  exit.py
src/oxq/signals/: __init__.py  crossover.py
src/oxq/tools/: __init__.py  data.py  (+2 more)
tests/backtest/: test_broker.py  test_engine.py
tests/core/: test_errors.py  test_types.py
tests/data/: conftest.py  test_factors.py  test_init.py  test_loaders.py  test_market.py  test_providers.py
tests/e2e/: conftest.py  test_agent_demo.py
tests/indicators/: test_sma.py
tests/mcp_server/: test_data_tools.py  test_server.py
tests/rules/: test_entry.py  test_exit.py
tests/signals/: test_crossover.py
tests/tools/: test_data.py  test_data_factor.py  test_registry.py  test_universe.py
tests/universe/: conftest.py  test_base.py  test_filter.py  test_init.py  test_static.py
(+4 files in other folders)
